syntax = "proto3";

import "rpc_user.proto";
package pb;

option go_package = "github.com/shaineminkyaw/microservice/pb";


message UserRequest {
    string email =1;
    string password =2;
    string verifyCode =3;
    string nation_id =4;
    uint32 gender_type =5;
    string city =6;
}

message UserResponse {
    User user=1;
}